--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lazy-history"
+name = "command-vault"
 version = "0.1.0"
 edition = "2021"
 authors = [""]
@@ -7,11 +7,11 @@ description = "An advanced command history manager"
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 rusqlite = { version = "0.30", features = ["bundled"] }
+dirs = "5.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-dirs = "5.0"
-anyhow = "1.0"
 thiserror = "1.0"
