--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+ratatui = "0.24.0"
+crossterm = "0.27.0"
