--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "command-vault"
+name = "lazy-history"
 version = "0.1.0"
 edition = "2021"
 authors = ["Ozan Kaşikci"]
@@ -18,3 +18,7 @@ serde_json = "1.0"
 thiserror = "1.0"
 ratatui = "0.24.0"
 crossterm = "0.27.0"
+atty = "0.2"
+
+[dev-dependencies]
+tempfile = "3.8"
