--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -2,101 +2,73 @@ name: Version Bump
 
 on:
   pull_request:
-    types: [labeled]
+    types: [labeled, opened, synchronize, reopened]
   workflow_dispatch:
     inputs:
-      bump_type:
+      bump:
         description: 'Version bump type (major, minor, patch)'
         required: true
         default: 'patch'
         type: choice
         options:
-          - patch
-          - minor
           - major
+          - minor
+          - patch
 
 jobs:
-  bump-version:
+  version-bump:
     if: |
-      (github.event_name == 'workflow_dispatch') ||
-      (github.event_name == 'pull_request' && (
-        contains(github.event.pull_request.labels.*.name, 'bump:major') ||
-        contains(github.event.pull_request.labels.*.name, 'bump:minor') ||
-        contains(github.event.pull_request.labels.*.name, 'bump:patch')
-      ))
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'pull_request' && (contains(github.event.pull_request.labels.*.name, 'bump:major') || contains(github.event.pull_request.labels.*.name, 'bump:minor') || contains(github.event.pull_request.labels.*.name, 'bump:patch')))
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Rust
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
-        
-      - name: Install cargo-bump
-        run: cargo install cargo-bump
 
-      - name: Determine bump type from label
-        if: github.event_name == 'pull_request'
-        id: bump-type-label
-        run: |
-          if [[ ${{ contains(github.event.pull_request.labels.*.name, 'bump:major') }} == 'true' ]]; then
-            echo "bump_type=major" >> $GITHUB_OUTPUT
-          elif [[ ${{ contains(github.event.pull_request.labels.*.name, 'bump:minor') }} == 'true' ]]; then
-            echo "bump_type=minor" >> $GITHUB_OUTPUT
-          else
-            echo "bump_type=patch" >> $GITHUB_OUTPUT
-          fi
+      - name: Install cargo-edit
+        run: cargo install cargo-edit
 
-      - name: Get bump type
-        id: bump-type
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "type=${{ github.event.inputs.bump_type }}" >> $GITHUB_OUTPUT
-          else
-            echo "type=${{ steps.bump-type-label.outputs.bump_type }}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Bump version
+      - name: Determine version bump
         id: bump
         run: |
-          # Get current version
-          CURRENT_VERSION=$(grep '^version = ' Cargo.toml | sed 's/version = "\(.*\)"/\1/')
-          
-          # Bump version
-          cargo bump ${{ steps.bump-type.outputs.type }}
-          
-          # Get new version
-          NEW_VERSION=$(grep '^version = ' Cargo.toml | sed 's/version = "\(.*\)"/\1/')
-          
-          echo "old_version=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
-          echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "bump=${{ github.event.inputs.bump }}" >> $GITHUB_OUTPUT
+          else
+            if [[ "${{ join(github.event.pull_request.labels.*.name, ' ') }}" =~ "bump:major" ]]; then
+              echo "bump=major" >> $GITHUB_OUTPUT
+            elif [[ "${{ join(github.event.pull_request.labels.*.name, ' ') }}" =~ "bump:minor" ]]; then
+              echo "bump=minor" >> $GITHUB_OUTPUT
+            else
+              echo "bump=patch" >> $GITHUB_OUTPUT
+            fi
+          fi
 
-      - name: Create Pull Request
-        if: github.event_name == 'workflow_dispatch'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: "chore: bump version ${{ steps.bump.outputs.old_version }} → ${{ steps.bump.outputs.new_version }}"
-          title: "chore: bump version ${{ steps.bump.outputs.old_version }} → ${{ steps.bump.outputs.new_version }}"
-          body: |
-            Automated version bump from ${{ steps.bump.outputs.old_version }} to ${{ steps.bump.outputs.new_version }}
-            
-            This PR was created automatically by the version bump workflow.
-          branch: "bump-version/${{ steps.bump.outputs.new_version }}"
-          delete-branch: true
-          labels: |
-            version-bump
-            automated-pr
+      - name: Get current version
+        id: current_version
+        run: |
+          version=$(grep "^version" Cargo.toml | sed 's/version = "\(.*\)"/\1/')
+          echo "version=$version" >> $GITHUB_OUTPUT
+
+      - name: Bump version
+        id: bump_version
+        run: |
+          cargo set-version --bump ${{ steps.bump.outputs.bump }}
+          new_version=$(grep "^version" Cargo.toml | sed 's/version = "\(.*\)"/\1/')
+          echo "version=$new_version" >> $GITHUB_OUTPUT
 
       - name: Commit changes
-        if: github.event_name == 'pull_request'
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -am "chore: bump version ${{ steps.bump.outputs.old_version }} → ${{ steps.bump.outputs.new_version }}"
-          git push
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add Cargo.toml Cargo.lock
+          git commit -m "chore: bump version ${{ steps.current_version.outputs.version }} -> ${{ steps.bump_version.outputs.version }}"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.head_ref || github.ref_name }}
