ci: improve release workflow
- Add Apple Silicon (M1/M2) support
- Add proper target triples for all platforms
- Package binaries in zip/tar.gz archives

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,29 +57,42 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
             artifact_name: command-vault
             asset_name: command-vault-linux-amd64
           - os: macos-latest
+            target: x86_64-apple-darwin
             artifact_name: command-vault
-            asset_name: command-vault-macos-amd64
+            asset_name: command-vault-macos-x86_64
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact_name: command-vault
+            asset_name: command-vault-macos-arm64
           - os: windows-latest
+            target: x86_64-pc-windows-msvc
             artifact_name: command-vault.exe
             asset_name: command-vault-windows-amd64.exe
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Build
-        run: cargo build --release
+        run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Get version from Cargo.toml
-        id: get_version
+      - name: Prepare asset for upload
+        shell: bash
         run: |
-          VERSION=$(grep '^version = ' Cargo.toml | sed 's/version = "\(.*\)"/\1/')
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          cd target/${{ matrix.target }}/release
+          if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+            7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.artifact_name }}
+          else
+            tar czf ../../../${{ matrix.asset_name }}.tar.gz ${{ matrix.artifact_name }}
+          fi
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
@@ -87,6 +100,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/release/${{ matrix.artifact_name }}
-          asset_name: ${{ matrix.asset_name }}
+          asset_path: ${{ matrix.os == 'windows-latest' && format('{0}.zip', matrix.asset_name) || format('{0}.tar.gz', matrix.asset_name) }}
+          asset_name: ${{ matrix.os == 'windows-latest' && format('{0}.zip', matrix.asset_name) || format('{0}.tar.gz', matrix.asset_name) }}
           asset_content_type: application/octet-stream
