--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ dirs = "5.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "1.0"
 ratatui = "0.24.0"
 crossterm = "0.27.0"
 atty = "0.2"
@@ -27,4 +26,5 @@ name = "cv"
 path = "src/main.rs"
 
 [dev-dependencies]
-tempfile = "3.8"
+tempfile = "3.8.1"
+ctor = "0.2.5"
