--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ crossterm = "0.27.0"
 atty = "0.2"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 regex = "1.10.2"
+colored = "2.0"
 
 [[bin]]
-name = "cv"
+name = "command-vault"
 path = "src/main.rs"
 
 [dev-dependencies]
