--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ atty = "0.2"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 regex = "1.10.2"
 colored = "2.0"
+shell-escape = "0.1.5"
 
 [[bin]]
 name = "command-vault"
