--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,18 +13,13 @@ env:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        include:
-          - os: ubuntu-latest
-            shell: bash
-          - os: windows-latest
-            shell: pwsh
-          - os: macos-latest
-            shell: bash
+
+    name: Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
@@ -45,11 +40,8 @@ jobs:
     
     - name: Build
       run: cargo build --verbose
-      shell: ${{ matrix.shell }}
     
     - name: Run tests
       run: cargo test --verbose
-      shell: ${{ matrix.shell }}
       env:
-        # Set environment variables specific to each OS if needed
         COMMAND_VAULT_TEST: 1
